--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "rimraf": "^3.0.2",
         "sass": "^1.54.3",
         "sass-loader": "^13.0.2",
+        "sass-resources-loader": "^2.2.5",
         "style-loader": "^3.3.1",
         "terser-webpack-plugin": "^5.3.3",
         "webpack": "^5.74.0",
